Create bootstrap layout and add images

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Giphy Searcher</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,6 +12,24 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <h1 class="text-left my-5">Giphy Searcher</h1>
+      <div class="container-fluid">
+        <div class="row d-flex flex-row justify-content-start mx-auto">
+          <div class="internet-bar col-11">internet</div>
+          <button class="col-1">Search</button>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row mx-auto">
+          <div class="image col-12 col-lg-4 p-1 p-lg-3 r-1 c-1"><img class="img-responsive" src="./public/homer.jpg" alt="Homer"></div>
+          <div class="image col-12 col-lg-4 p-1 p-lg-3 r-1 c-2"><img class="img-responsive" src="./public/aol.jpg" alt="AOL"></div>
+          <div class="image col-12 col-lg-4 p-1 p-lg-3 r-1 c-3"><img class="img-responsive" src="./public/404.jpg" alt="404"></div>
+        </div>
+        <div class="row mx-auto">
+          <div class="image col-12 col-lg-4 p-1 p-lg-3 r-2 c-1"><img class="img-responsive" src="./public/neeson.jpeg" alt="Neeson"></div>
+          <div class="image col-12 col-lg-4 p-1 p-lg-3 r-2 c-2"><img class="img-responsive" src="./public/kip.jpeg" alt="Kip"></div>
+          <div class="image col-12 col-lg-4 p-1 p-lg-3 r-2 c-3"><img class="img-responsive" src="./public/dial-up.jpeg" alt="dial-up"></div>
+        </div>
+      </div>
     </body>
 </html>
