--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h1 class="text-left ml-3 my-3">Giphy Searcher</h1>
       <div class="container-fluid">
         <div class="row d-flex flex-row justify-content-start mx-auto">
-          <input class="internet-bar col-11" placeholder="internet">
-          <button class="col-1">Search</button>
+          <input id="query" class="internet-bar col-11" placeholder="internet">
+          <button id="search-btn" class="col-1">Search</button>
         </div>
       </div>
       <div class="container-fluid">
