--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </div>
       </div>
       <div class="container-fluid">
-        <div class="row mx-auto d-flex justify-content-around">
-          <div class="image col-12 col-md-5 col-lg-3 m-2 r-1 c-2"><img class="col-12 img-responsive" src="./public/aol.jpg" alt="AOL"></div>
-          <div class="image col-12 col-md-5 col-lg-3 m-2 r-1 c-3"><img class="col-12 img-responsive" src="./public/404.jpg" alt="404"></div>
-          <div class="image col-12 col-md-5 col-lg-3 m-2 r-2 c-2"><img class="col-12 img-responsive" src="./public/kip.jpeg" alt="Kip"></div>
-          <div class="image col-12 col-md-5 col-lg-3 m-2 r-2 c-3"><img class="col-12 img-responsive" src="./public/dial-up.jpeg" alt="dial-up"></div>
-          <div class="image col-12 col-md-5 col-lg-3 m-2 r-1 c-1"><img class="col-12 img-responsive" src="./public/homer.jpg" alt="Homer"></div>
-          <div class="image col-12 col-md-5 col-lg-3 m-2 r-2 c-1"><img class="col-12 img-responsive" src="./public/neeson.jpeg" alt="Neeson"></div>
+        <div class="gif-container row mx-auto d-flex justify-content-around">
+          <div class="image col-12 col-md-5 col-lg-3 m-2"><img class="col-12 img-responsive" src="./public/aol.jpg" alt="AOL"></div>
+          <div class="image col-12 col-md-5 col-lg-3 m-2"><img class="col-12 img-responsive" src="./public/404.jpg" alt="404"></div>
+          <div class="image col-12 col-md-5 col-lg-3 m-2"><img class="col-12 img-responsive" src="./public/kip.jpeg" alt="Kip"></div>
+          <div class="image col-12 col-md-5 col-lg-3 m-2"><img class="col-12 img-responsive" src="./public/dial-up.jpeg" alt="dial-up"></div>
+          <div class="image col-12 col-md-5 col-lg-3 m-2"><img class="col-12 img-responsive" src="./public/homer.jpg" alt="Homer"></div>
+          <div class="image col-12 col-md-5 col-lg-3 m-2"><img class="col-12 img-responsive" src="./public/neeson.jpeg" alt="Neeson"></div>
         </div>
       </div>
     </body>
